src/objects/OpportunityToBanner__c.object
<CustomObject>
    <description>Synchronization object for moving data from Salesforce to Banner for the Opportunity (CARE Profile) Object</description>
    <fields>
        <fullName>CampusCodeOUT__c</fullName>
        <formula>text(Opportunity__r.StudentAttributes__r.Affiliation__c)</formula>
        <label>Campus Code (OUT)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentStatus__c</fullName>
        <formula>/* -0.0416 is used to adjust Daylight Saving Time changing. 
  Delete -0.0416 in Summer; 
  Keep -0.0416 in Winter, 
  Winter: (LastSynchronizedToBanner__c - Opportunity__r.LastModifiedDate) &lt; -0.0011 - 0.0416
  Summer: (LastSynchronizedToBanner__c - Opportunity__r.LastModifiedDate) &lt; -0.0011 
*/ 

IF(AND(NOT(ResynchronizeToBanner__c), NOT(SynchronizationError__c = &apos;None&apos;), NOT(OR(ISNULL(SynchronizationError__c), ISBLANK(SynchronizationError__c)))), 
   &apos;Error&apos;, 
   IF(AND(NOT(OR(ISNULL( Opportunity__r.PIDM__c ), ISBLANK(Opportunity__r.PIDM__c))), OR((LastSynchronizedToBanner__c - Opportunity__r.LastModifiedDate ) &lt; -0.0011, ResynchronizeToBanner__c, ISNULL(LastSynchronizedToBanner__c)), 
   NOT(AND( Opportunity__r.LastModifiedBy.FirstName = &apos;System&apos;, Opportunity__r.LastModifiedBy.LastName = &apos;Administrator&apos;))), 
      &apos;Update&apos;, 
      IF(AND( Opportunity__r.StudentContact__r.BannerReady__c , OR(ISNULL(Opportunity__r.PIDM__c), ISBLANK(Opportunity__r.PIDM__c))), 
         &apos;Insert&apos;, 
         IF(Opportunity__r.StudentContact__r.BannerReady__c, &apos;Current&apos;, &apos;Ignore&apos;) 
      ) 
   ) 
)</formula>
        <label>Current Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountAmountOUT__c</fullName>
        <formula>Opportunity__r.DiscountAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount (OUT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ECPIDMOUT__c</fullName>
        <formula>Opportunity__r.Owner.PIDM__c</formula>
        <label>EC PIDM (OUT)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinAidOUT__c</fullName>
        <formula>IF(Opportunity__r.LearnAboutFinancialAid__c, &apos;Y&apos;, &apos;N&apos;)</formula>
        <label>Fin Aid (OUT)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstEnrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntakeInterviewUserPIDMOUT__c</fullName>
        <formula>Opportunity__r.IntakeBy__c</formula>
        <label>Intake Interview User PIDM (OUT)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastSynchronizedToBanner__c</fullName>
        <label>Last Synchronized To Banner</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MajorOfInterestOUT__c</fullName>
        <formula>Opportunity__r.MarketingProgram__r.BannerProgramCode__r.Name</formula>
        <label>Major of Interest (OUT)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities To Banner</relationshipLabel>
        <relationshipName>OpportunitiesToBanner</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PIDMOUT__c</fullName>
        <formula>Opportunity__r.PIDM__c</formula>
        <label>PIDM (OUT)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentAmountOUT__c</fullName>
        <formula>Opportunity__r.ApplicationFeeAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount (OUT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaymentTypeOUT__c</fullName>
        <formula>Text(Opportunity__r.PaymentType__c)</formula>
        <label>Payment Type (OUT)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileStatusOUT__c</fullName>
        <formula>Opportunity__r.CAREStatusListView__c</formula>
        <label>Profile Status (OUT)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResynchronizeToBanner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resynchronize To Banner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDateOUT__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <label>Start Date (OUT)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SynchronizationError__c</fullName>
        <label>Synchronization Error</label>
        <type>TextArea</type>
    </fields>
    <label>Opportunity To Banner</label>
    <nameField>
        <displayFormat>OTB-{0}</displayFormat>
        <label>Opportunity To Banner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunities To Banner</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>